# Odyssey

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/cli/: create.rs  mod.rs  run.rs  search.rs
src/cli/database/: delete.rs  import.rs  mod.rs
src/comput/: lca.rs  mod.rs
src/comput/impacts/: ef31.rs  mod.rs
src/errors/: mod.rs
src/parsers/: mod.rs
src/parsers/ecospold2/: build.rs  mod.rs  parse.rs
src/parsers/ecospold2/impacts/: ef31.rs
src/parsers/impacts/: mod.rs
src/parsers/impacts/ef31/: mod.rs
src/utils/: constants.rs  mod.rs  read_only.rs
src/utils/matrix/: cs.rs  csn.rs  css.rs  mapped_matrix.rs  mapped_vector.rs  mod.rs
src/utils/search/: mod.rs
wrapper/: suitesparse_wrapper.c  suitesparse_wrapper.h  umfpack_wrapper.c  umfpack_wrapper.h
